--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gfc-registration",
-  "homepage": "https://gofullcircle.github.io/",
+  "homepage": "https://gofullcircle.github.io/registration/",
   "version": "0.3.0",
   "private": true,
   "dependencies": {
